--- a/atom-proje/homepage.html
+++ b/atom-proje/homepage.html
@@ -85,7 +85,7 @@
                 </header>
 
 
-                <div class="slide-wrapper justify-content-end">
+                <div class="slide-wrapper justify-content-end pt-5">
                     <div class="slide-item relative">
                         <div class="row w-100 g-0">
                             <div class="content my-auto col-12 col-lg-6 order-2 order-lg-1 ">
@@ -258,7 +258,7 @@
         </div>
 
         <section class="services" id="services-section">
-            <div class="container body-5 mt-3">
+            <div class="container body-5 mt-3 marginH">
                 <div class="row mt-5">
                     <div class="col-md-6 col-lg-8 mb-4 mb-md-0 wow fadeInLeft" data-wow-delay="200ms">
                         <div class="services-slider ">
@@ -327,7 +327,7 @@
 
         <section class="counter mt-5 mt-md-0">
             <div class="container body-5 ">
-                <div class="row ">
+                <div class="row gx-5">
                     <div class="col-md-6 col-lg-4 order-2 order-lg-1">
                         <div class="services-content ">
                             <h3 class="wow fadeInDown" data-wow-delay="250ms">Biz Kimiz?</h3>
@@ -344,7 +344,7 @@
                     </div>
                     <div class="col-md-6 col-lg-8 mt-5 mb-5 order-1 order-lg-2">
                         <div class="counter-numbers">
-                            <div class="row ">
+                            <div class="row gx-5">
                                 <div class="col-6 col-lg-3  item">
                                     <div class="value" akhi="782">0</div>
                                     <span>Ürün Tamiri</span>
@@ -374,11 +374,11 @@
                 <div class="row">
                     <div class="col-lg-6 left-side">
                         <div class="row">
-                            <div class="d-none d-lg-block col-lg-3"></div>
-                            <div class="col-12 col-lg-7">
+                            
+                            <div class="col-12 offset-xl-1 offset-xxl-3 col-xl-10 col-xxl-7">
                                 <h3>Teknik Servis<br />
                                     Süreci Nasıl İşler?</h3>
-                                <div class="row">
+                                <div class="row px-md-5 px-lg-0">
                                     <div class="col-md-6">
                                         <div class="box">
                                             <div class="box-img">
@@ -434,8 +434,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 p-md-5 p-lg-0 right-side p-0">
-                        <div class="col-12 col-lg-7">
+                    <div class="col-lg-6 p-md-5 p-lg-0 right-side my-auto p-0">
+                        <div class="col-12  col-xl-7">
                             <div class="how-it-image shine-animation cpointer">
                                 <img src="./frontend/images/howitworks.png" alt="">
                             </div>
@@ -455,7 +455,7 @@
                     <div class="swiper mySwiper swiper-init demo-swiper comment-section" data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="3">
                         <div class="swiper-wrapper" >
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -471,7 +471,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -487,7 +487,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -503,7 +503,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -519,7 +519,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -535,7 +535,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -551,7 +551,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -567,7 +567,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -583,7 +583,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto mx-md-0">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -599,7 +599,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="box-item">
+                                <div class="box-item mx-auto">
                                     <img src="./frontend/icons/quote.png" alt="">
                                     <p class="text-center mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
                                         cumque vitae consectetur, pariatur corporis commodi architecto non accusantium illo quae
@@ -770,7 +770,7 @@
                     </div>
                     <div class="col-md-8 col-lg-9">
                         <div class="row g5">
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="150ms">
                                     <a href="#"><h5>KURUMSAL</h5></a>
                                     <ul>
@@ -780,7 +780,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="300ms">
                                     <a href="#"><h5>EV VE OFİS</h5></a>
                                     <ul>
@@ -798,7 +798,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
                                     <a href="#"><h5>ENDÜSTRİYEL MUTFAK</h5></a>
                                     <ul>
@@ -812,7 +812,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="600ms">
                                     <a href="#"><h5>İLETİŞİM</h5></a>
                                     <p>Mustafa Kemal Paşa Caddesi<br />
