--- a/atom-proje/blog.html
+++ b/atom-proje/blog.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="col-md-8 col-lg-9">
                         <div class="row g5">
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="150ms">
                                     <a href="#"><h5>KURUMSAL</h5></a>
                                     <ul>
@@ -276,7 +276,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="300ms">
                                     <a href="#"><h5>EV VE OFİS</h5></a>
                                     <ul>
@@ -294,7 +294,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
                                     <a href="#"><h5>ENDÜSTRİYEL MUTFAK</h5></a>
                                     <ul>
@@ -308,7 +308,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-3">
+                            <div class="col-sm-6  col-lg-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="600ms">
                                     <a href="#"><h5>İLETİŞİM</h5></a>
                                     <p>Mustafa Kemal Paşa Caddesi<br />
