--- a/atom-proje/article-klima.html
+++ b/atom-proje/article-klima.html
@@ -190,7 +190,7 @@
                         <div class="col-md-6 my-auto">
                             <div class="dual-content my-auto align-self-center  my-auto">
                                 <h5 class="wow fadeInDown" data-wow-delay="200ms">Klima Bakımında Işini Kolaylaştıracak Ipuçları Ve Dikkat Etmen Gereken Noktalar Bu Yazıda Seni Bekliyor.</h5>
-                                <p>Klima bakımı, bu hassas iklimlendirme cihazlarının verimli bir şekilde çalışması için en önemli süreçlerden birini oluşturuyor. Bakımı düzenli olarak yapılmayan bir klima, ne kadar yüksek bir model olursa olsun verimliliğini kaybedebilir. Bu açıdan evlerden ofislere kadar farklı pek çok yaşam alanında yeri olan klimaların bakımının belirli zaman aralıklarında, doğru bir şekilde yapılması gerekiyor. Peki klima bakımında neler yapılır? Ne kadar sürede bir bakım yapmak yeterli? Klimanın bakımını kendim yapabilir miyim? Tüm sorulara senin için kapsamlı yanıtlar hazırladık!</p>
+                                <p class="wow fadeInDown" data-wow-delay="400ms">Klima bakımı, bu hassas iklimlendirme cihazlarının verimli bir şekilde çalışması için en önemli süreçlerden birini oluşturuyor. Bakımı düzenli olarak yapılmayan bir klima, ne kadar yüksek bir model olursa olsun verimliliğini kaybedebilir. Bu açıdan evlerden ofislere kadar farklı pek çok yaşam alanında yeri olan klimaların bakımının belirli zaman aralıklarında, doğru bir şekilde yapılması gerekiyor. Peki klima bakımında neler yapılır? Ne kadar sürede bir bakım yapmak yeterli? Klimanın bakımını kendim yapabilir miyim? Tüm sorulara senin için kapsamlı yanıtlar hazırladık!</p>
                             </div>
                         </div>
                         
@@ -313,7 +313,7 @@
                                 Ünitedeki elektriksel bağlantı noktalarının genel kontrolü yapılır. İletişim hattı, elektronik kart bağlantı soketleri gibi.
                                 Fanın ve hareketli parçaların mekanik bağlantıları kontrol edilir.
                                 Klimanın İç Ünite Bakımı:</p>
-                                <p>
+                                <p class="wow fadeInDown" data-wow-delay="600ms">
                                 Önce cihazın dışı temizlenir.
                                 Ardından filtreler temizlenir.
                                 Cihazın ısı değiştirgeci (serpantin) temizlenir.
@@ -342,19 +342,19 @@
                     </div>
                     <div class="col-md-6   order-2 order-md-1">
                         <div class="dual-content my-auto align-self-center  my-auto">
-                            <p>
+                            <p class="wow fadeInDown" data-wow-delay="200ms">
                                 Bakır boru hattını sabitlemek ya da taşımak için kullanılan alet edevatlar kontrol edilir.</p>
 
-                                <p>Ezilme ya da kaçak olup olmadığı kontrol edilir.
+                                <p class="wow fadeInDown" data-wow-delay="400ms">Ezilme ya da kaçak olup olmadığı kontrol edilir.
                                     Hattın izolasyonu kontrol edilir, gerektiği durumlarda onarılır.
                                     Drenaj Hattı Bakımı:</p>
 
-                                    <p>Ek yerlerde sızdırmazlık kontrolü sağlanır.
+                                    <p class="wow fadeInDown" data-wow-delay="600ms">Ek yerlerde sızdırmazlık kontrolü sağlanır.
                                         Hatta sızdırmazlık ve tıkanma olup olmadığı kontrol edilir.
                                         Hattı sabitlemek ya da taşımak için kullanılan alet edevatlar kontrol edilir.
                                         Klima Çalışırken Yapılan Bakımlar:</p>
 
-                                        <p>Klimanın çalışma değerleri kaydedilir.
+                                        <p class="wow fadeInDown" data-wow-delay="800ms">Klimanın çalışma değerleri kaydedilir.
                                             Dış ünite ve iç üniteninhava emiş ve üfleme sıcaklık değerleri alınır.
                                             Dış ve iç havanın sıcaklık değerleri alınır.
                                             Yüksek ve alçak basınç değerleri kaydedilir.
@@ -382,8 +382,8 @@
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
                     <div class="item-content">
-                        <h5>Televizyon Tamiri ve Bakımı</h5>
-                        <p>Televizyon, şüphesiz hayatımızda önemli 
+                        <h5 class="wow fadeInDown" data-wow-delay="200ms">Televizyon Tamiri ve Bakımı</h5>
+                        <p class="wow fadeInDown" data-wow-delay="400ms">Televizyon, şüphesiz hayatımızda önemli 
                             bir yer ediniyor. Biz de İstanbul Teknik 
                             Servis olarak, marka ve model fark 
                             etmeksizin televi…»</p>
@@ -395,8 +395,8 @@
                         <img src="./frontend/images/blog-2.png" alt="...">
                     </div>
                     <div class="item-content">
-                        <h5>Televizyon Tamiri ve Bakımı</h5>
-                        <p>Televizyon, şüphesiz hayatımızda önemli 
+                        <h5 class="wow fadeInDown" data-wow-delay="200ms">Televizyon Tamiri ve Bakımı</h5>
+                        <p class="wow fadeInDown" data-wow-delay="400ms">Televizyon, şüphesiz hayatımızda önemli 
                             bir yer ediniyor. Biz de İstanbul Teknik 
                             Servis olarak, marka ve model fark 
                             etmeksizin televi…»</p>
@@ -408,8 +408,8 @@
                         <img src="./frontend/images/blog-3.png" alt="...">
                     </div>
                     <div class="item-content">
-                        <h5>Televizyon Tamiri ve Bakımı</h5>
-                        <p>Televizyon, şüphesiz hayatımızda önemli 
+                        <h5 class="wow fadeInDown" data-wow-delay="200ms">Televizyon Tamiri ve Bakımı</h5>
+                        <p class="wow fadeInDown" data-wow-delay="400ms">Televizyon, şüphesiz hayatımızda önemli 
                             bir yer ediniyor. Biz de İstanbul Teknik 
                             Servis olarak, marka ve model fark 
                             etmeksizin televi…»</p>
@@ -421,8 +421,8 @@
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
                     <div class="item-content">
-                        <h5>Televizyon Tamiri ve Bakımı</h5>
-                        <p>Televizyon, şüphesiz hayatımızda önemli 
+                        <h5 class="wow fadeInDown" data-wow-delay="200ms">Televizyon Tamiri ve Bakımı</h5>
+                        <p class="wow fadeInDown" data-wow-delay="400ms">Televizyon, şüphesiz hayatımızda önemli 
                             bir yer ediniyor. Biz de İstanbul Teknik 
                             Servis olarak, marka ve model fark 
                             etmeksizin televi…»</p>
@@ -513,7 +513,7 @@
             </div>
             <div class="whatsapp-contact wow fadeInRight" data-wow-delay="150ms">
                 <a href="#">
-                    <h5>WhatsApp Hattı</h5>
+                    <h5>WHATSAPP HATTI</h5>
                     <p>0 532 206 08 08</p>
                 </a>
             </div>
