--- a/atom-proje/hizmetler-detay.html
+++ b/atom-proje/hizmetler-detay.html
@@ -418,7 +418,7 @@
             </div>
             <div class="whatsapp-contact wow fadeInRight" data-wow-delay="150ms">
                 <a href="#">
-                    <h5>WhatsApp Hattı</h5>
+                    <h5>WHATSAPP HATTI</h5>
                     <p>0 532 206 08 08</p>
                 </a>
             </div>
