--- a/atom-proje/bulasik-makinesi-article.html
+++ b/atom-proje/bulasik-makinesi-article.html
@@ -299,7 +299,7 @@
         
 
 
-        <div class="horizon"></div>
+        <div class="horizon d-none d-md-block"></div>
 
         
 
@@ -447,7 +447,7 @@
             </div>
             <div class="whatsapp-contact wow fadeInRight" data-wow-delay="150ms">
                 <a href="#">
-                    <h5>WhatsApp Hattı</h5>
+                    <h5>WHATSAPP HATTI</h5>
                     <p>0 532 206 08 08</p>
                 </a>
             </div>
