--- a/atom-proje/hizmet-verdigimiz-urun-gruplari.html
+++ b/atom-proje/hizmet-verdigimiz-urun-gruplari.html
@@ -163,7 +163,7 @@
         <section  class="ourServices mt-4">
             <div class="container body-5">
                 <h1>Hizmet Verdiğimiz Ürün Grupları</h1>
-                    <div class="row our-services" id="ourServiceGroup">
+                    <div class="row our-services our-services-normal" id="ourServiceGroup">
                         <!--api-->
                     </div>
             </div>
@@ -230,7 +230,7 @@
             </div>
             <div class="whatsapp-contact wow fadeInRight" data-wow-delay="150ms">
                 <a href="#">
-                    <h5>WhatsApp Hattı</h5>
+                    <h5>WHATSAPP HATTI</h5>
                     <p>0 532 206 08 08</p>
                 </a>
             </div>
